# football_rank

./: .gitattributes  .gitignore  README.md  football.db  main.py  match_data.db  pyproject.toml
src/: fetch_worker.py  football_data_fetcher.py  league_mapper.py  main_window.py  match_data.py  match_info.py  match_parser.py  match_ranking.py  mongodb_manager.py  sqlite_importer.py  team.py  team_info_dialog.py  team_manager.py  team_name_mapper.py  test_league_teams.py  test_ranking.py  test_ranking_fix.py  test_team_integration.py
temp_files/: temp_response.json
tests/: test_imports.py  test_match_parser.py  test_sp1_teams.py  test_sqlite_json.py
