[project]
name = "football-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openskill>=6.1.3",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "pyqt6>=6.9.1",
    "pyqt6-charts>=6.9.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlite-utils>=3.38",
]
